fixed overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    overflow-x: hidden;
     padding-top: 50px;
     font-family: "Product Sans";
     background-color: black;
